force-app/main/default/objects/Opportunity/validationRules/Close_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Date_Required</fullName>
    <active>true</active>
    <description>Prevents saving Opportunity without a Close Date</description>
    <errorConditionFormula>ISBLANK(CloseDate)</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>Close Date is required before saving the Opportunity.</errorMessage>
</ValidationRule>