force-app/main/default/objects/Opportunity/validationRules/Closed_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Contract_Start_Date__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>Contract Start Date Must be Feature Dates Only</errorMessage>
</ValidationRule>