force-app/main/default/objects/Opportunity/validationRules/Contract_End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_End_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Contract_End_Date__c &lt; TODAY()  &amp;&amp;  Contract_End_Date__c &lt; CloseDate</errorConditionFormula>
    <errorDisplayField>Contract_End_Date__c</errorDisplayField>
    <errorMessage>Contract End Date must be feature dates only</errorMessage>
</ValidationRule>