force-app/main/default/objects/Opportunity/validationRules/Contract_Start_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Start_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(StageName) == &quot;Closed Won&quot; &amp;&amp; ISBLANK(Contract_Start_Date__c)</errorConditionFormula>
    <errorDisplayField>Contract_Start_Date__c</errorDisplayField>
    <errorMessage>The following fields are required when the Opportunity is Closed Won: Contract Start Date, Contract End Date, Project Manager</errorMessage>
</ValidationRule>