force-app/main/default/objects/Opportunity/validationRules/Project_Manager_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Manager_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(StageName) == &quot;Closed Won&quot; &amp;&amp; ISBLANK(Project_Manager__c)</errorConditionFormula>
    <errorDisplayField>Project_Manager__c</errorDisplayField>
    <errorMessage>Project Manager is Required When Opportunity is Closed Won</errorMessage>
</ValidationRule>